nginx/flask-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: helloapi-namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: helloapi-namespace
  labels:
    app: helloapi-app
  name: helloapi-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloapi-app
  template:
    metadata:
      labels:
        app: helloapi-app
    spec:
      containers:
      - image: helloapi:1
        name: helloapi-app
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  namespace: helloapi-namespace
  name: helloapi-service
  labels:
    app: helloapi-app
spec:
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: 5000
  selector:
    app: helloapi-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: helloapi-namespace
spec:
  ingressClassName: nginx
  rules:
    - host: tomer-flask.octopus.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: helloapi-service
                port:
                  number: 80
