nginx/jfrog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jfrog-ingress
  namespace: artifactory
spec:
  ingressClassName: nginx
  rules:
    - host: tomer-jfrog.octopus.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: artifactory
                port:
                  number: 8082
